--- a/Pages/css/style_index.css
+++ b/Pages/css/style_index.css
@@ -25,9 +25,19 @@ html,body
 {
   margin-left: 700px;
 }
+@media only screen and (max-width:1200px) {
+
+  .navbar-nav
+{
+  margin-left: 0px;
+}
+}
 .nav-item
 {
   font-size: 20px;
+  display: flex;
+  
+  
 
 }
 
@@ -102,7 +112,8 @@ padding-top: 50px;
 /*card-1*/
 .card-1 {
 position: relative;
-margin-left: auto;
+margin-left: 10%;
+margin-top: 20px;
 width: 400px;
 height: 200px;
 border-radius: 20px;
@@ -127,6 +138,7 @@ background-color: rgb(24, 37, 154);
 .card-2 {
     position: relative;
     margin-left: 10%;
+    margin-top: 20px;
     width: 400px;
     height: 200px;
     border-radius: 20px;
@@ -149,7 +161,10 @@ background-color: rgb(24, 37, 154);
 /*card-3*/
 .card-3 {
     position: relative;
-    margin-right: 30%;
+    
+   margin-left: 10%;
+   margin-top: 20px;
+   margin-bottom: 0px;
     width: 400px;
     height: 200px;
     border-radius: 20px;
@@ -172,16 +187,16 @@ background-color: rgb(24, 37, 154);
 
 /*card-4*/
 .card-4 {
-    margin-left: 40%;
-    margin-top: auto;
-    position: relative;
-    width: 400px;
-    height: 200px;
-    border-radius: 20px;
-    overflow: hidden;
-    transition: all 0.3s ease-in-out;
-    box-shadow: 10px 10px 53px 0px rgba(0, 0, 0, 0.49);
-    }
+  margin-left: 40%;
+  margin-top: auto;
+  position: relative;
+  width: 400px;
+  height: 200px;
+  border-radius: 20px;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 10px 10px 53px 0px rgba(0, 0, 0, 0.49);
+  }
     .card-4:hover .image {
     filter: blur(1.4px);
     transform: scale(1.5);
@@ -197,16 +212,16 @@ background-color: rgb(24, 37, 154);
 
 /*card-5*/
 .card-5 {
-    margin-right: 40%;
-    margin-top: auto;
-    position: relative;
-    width: 400px;
-    height: 200px;
-    border-radius: 20px;
-    overflow: hidden;
-    transition: all 0.3s ease-in-out;
-    box-shadow: 10px 10px 53px 0px rgba(0, 0, 0, 0.49);
-    }
+  margin-right: 40%;
+  margin-top: auto;
+  position: relative;
+  width: 400px;
+  height: 200px;
+  border-radius: 20px;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 10px 10px 53px 0px rgba(0, 0, 0, 0.49);
+  }
     .card-5:hover .image {
     filter: blur(1.4px);
     transform: scale(1.5);
@@ -258,7 +273,38 @@ background-color: #00C2D1;
 color: #fff;
 padding: 5px 20px;
 }
+/*________________________________________________________________*/
+@media only screen  and (max-width:1000px){
+  
+.card-1,.card-2,.card-3 {
+  position: relative;
+  margin-left: 10%;
+  margin-top: 20px;
+  width: 400px;
+  height: 200px;
+  border-radius: 20px;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 10px 10px 53px 0px rgba(0, 0, 0, 0.49);
+  }
+}
+@media only screen and (max-width:1200px) {
+  
 
+.card-4,.card-5 {
+  margin-left: 10%;
+  margin-top: auto;
+  position: relative;
+  margin-top: 20px;
+  width: 400px;
+  height: 200px;
+  border-radius: 20px;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 10px 10px 53px 0px rgba(0, 0, 0, 0.49);
+  }
+}
+/*_______________________________________________________*/
 .hero
 {
     height: 50px;
